Added basic song functionality to Raspbot.
It's very basic, for now, but will be extended. I want to add tags
eventually.

Also (hopefully?) added the abilty to enable/disable the ip-reporter service.

--- a/discord/ip-reporter/ip-reporter.service
+++ b/discord/ip-reporter/ip-reporter.service
@@ -18,5 +18,5 @@ ExecStart=/home/pi/projects/discord/ip-reporter/ip-reporter.py start
 ExecStop=/home/pi/projects/discord/ip-reporter/ip-reporter.py stop
 
 [Install]
-#WantedBy=
+WantedBy=multi-user.target
 #Alias=
