--- a/discord/raspbot/raspbot.service
+++ b/discord/raspbot/raspbot.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=IP Reporter
+Description=Raspbot
 
 # Attempt to restart service forever
 StartLimitIntervalSec=0
@@ -9,14 +9,14 @@ Type=forking
 User=pi
 
 # See daemon.py
-PIDFile=/run/user/1000/ip-reporter/pid
+PIDFile=/run/user/1000/raspbot/pid
 
 # Attempt to restart stopped service every X seconds
 RestartSec=30
 Restart=always
-ExecStart=/home/pi/projects/discord/ip-reporter/ip-reporter.py start
-ExecStop=/home/pi/projects/discord/ip-reporter/ip-reporter.py stop
+ExecStart=/home/pi/projects/discord/raspbot/raspbot.py start
+ExecStop=/home/pi/projects/discord/raspbot/raspbot.py stop
 
 [Install]
-#WantedBy=
+WantedBy=multi-user.target
 #Alias=
